--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,10 +1,6 @@
-<form class="flex flex-col max-w-[200px] gap-2">
-   
-
-    
-    <label for="name">Qual o seu nome?</label>
-    <input class="bg-slate-300" name="name" type="text">
-    <button class="rounded-xl bg-blue-400">Enviar!</button>
 
 
-</form>
+<div>
+
+    <button (click)="sendName('Emanuel')" > Enviar nome </button>
+</div>
