--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header></app-header>
+<app-header [recievedName]="recievedName" [name]="name"></app-header>
 
 <app-form (nameData)="onRecieveName($event)"></app-form>
